# do-an

./: .gitignore  BUILD.md  BUILD_INSTRUCTIONS.md  Bao_cao_giai_trinh_DPI.md  Dockerfile  FEATURES.md  FEATURE_MAPPING.md  HOW_TO_USE_RISK_ASSESSMENT.md  IMPLEMENTATION_STATUS.md  MANIFEST.in  NETWORK_TOPOLOGY_STATUS.md  OT_PROTOCOL_SCANNING.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  RISK_ASSESSMENT_INTEGRATION.md  RISK_ASSESSMENT_README.md  S7_AUTHENTICATION.md  SESSION_AND_DATABASE_GUIDE.md  TOPOLOGY_GUIDE.md  WEB_GUI_GUIDE.md  WINDOWS_SETUP.md  ablation_study.py  attack_event_logger.py  build_exe.py  build_portable.py  collect_dataset.py  create_notebook.py  dataset_collector.py  day1_benign.py  day2_dos.py  docker-compose.yml  extract_dcp_features.py  extract_s7_features.py  how_to_install.md  icsscout_app.spec  icsscout_requirements.txt  ifcount.txt  install_windows.bat  (+36 more)
ICSScout_Portable/: README.txt  Start_ICSScout.bat  requirements.txt  start_icsscout.sh
attacks_ext/: __init__.py  config_ext.py  dns_spoof_ics.py  ews_firmware_tamper.py  ews_rogue_engineer.py  hmi_alarm_suppress.py  hmi_credential_brute.py  hmi_fake_display.py  kill_chain.py
docs/: S7_PROTECTION_MECHANISM.md
examples/: passive_recon_example.py  s7_client_example.py
icsscout/: README.md  __init__.py  version.py
s7pwn/: __main__.py  cli.py  command_router.py  command_validator.py  core_io.py  network_topology.py  report_exporter.py  runtime.py  state.py  test.py  utils.py  validator.py  web_gui.py
scratch/: check_snap7.py
tests/: common.py  test_dns_spoof.py  (+6 more)
(+99 files in other folders)
